Bottom Sheet Added

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -36,4 +36,6 @@
 
     <include layout="@layout/content_main" />
 
+    <include layout="@layout/fragment_bottom_sheet_dialog" />
+
 </android.support.design.widget.CoordinatorLayout>
