--- a/FullDesign/FullDesign/app/src/main/res/layout/fragment_maps.xml
+++ b/FullDesign/FullDesign/app/src/main/res/layout/fragment_maps.xml
@@ -6,10 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MapsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Maps Fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
+
